<resources>
    <string name="app_name">Kotlin_FilmApp_Lesson_10</string>
    <string name="film_image">Film Image</string>
    <string name="receiving_data">Receiving Data…</string>
    <string name="year">Год:</string>
    <string name="rating">Оценка:</string>
    <string name="film_rating_image">Film Rating Image</string>
    <string name="film_year_icon">Film Year Icon</string>
    <string name="error">Error getting Data!</string>
    <string name="reloading">"Reloading Data…"</string>
    <string name="overlay">Overlay</string>
    <string name="film_category_change_button">Film Category Change Button</string>
    <string name="all_films">All Films:</string>
    <string name="min">мин</string>

    <string name="successData">All Films updated successfully!</string>
    <string name="reloadAgain">Reload again</string>
    <string name="history_top_text">Ваши просмотренные видео:</string>
    <string name="my_favorite_films">Мои любимые фильмы</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="favorite_film_icon">Favorite Film icon</string>
    <string name="my_contacts">Мои контакты</string>
    <string name="actor_image">Actor image</string>
    <string name="place_point">Place point</string>
    <string name="birth_place">Birth place</string>
    <string name="search">Поиск</string>
    <string name="input_hint">Type here any place</string>
    <string name="output_birth_place">Место рождения этого актёра:</string>
</resources>