<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iw_film_image"
        android:layout_width="184dp"
        android:layout_height="260dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/film_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_film_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/receiving_data"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iw_film_image"
        tools:text="Film Name" />

    <TextView
        android:id="@+id/tw_film_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/rating"
        app:layout_constraintEnd_toStartOf="@id/tw_film_rating"
        app:layout_constraintTop_toBottomOf="@id/tw_film_name"
        tools:text="Оценка: "/>

    <TextView
        android:id="@+id/tw_film_rating"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tw_film_description"
        app:layout_constraintTop_toBottomOf="@id/tw_film_name"
        tools:text="Film Rating" />

    <TextView
        android:id="@+id/tw_film_year_label"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="28dp"
        android:text="@string/year"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/tw_film_year"
        app:layout_constraintStart_toStartOf="@id/tw_film_description"
        app:layout_constraintTop_toBottomOf="@id/tw_film_name"
        tools:text="Год: " />

    <TextView
        android:id="@+id/tw_film_year"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tw_film_year_label"
        app:layout_constraintTop_toBottomOf="@id/tw_film_name"
        tools:text="Film Year" />

    <TextView
        android:id="@+id/tw_film_description"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="20dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tw_film_year"
        tools:text="Film Description" />

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tw_film_name"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>